--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
     padding-top: 40px;
 }
 
+img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 p {
     line-height: 1.6em;
     margin-bottom: 30px;
